# NBD-PRORICH

./: DELIVERY_SUMMARY.md  Index.html  LARGE_DATA_FIX.md  LAZY_LOADING_GUIDE.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  Procfile  RENDER_DEPLOYMENT.md  ROLE_BASED_ACCESS_FIX.md  code.gs  main.py  pyproject.toml  render.yaml  requirements.txt  server.py
crm-python-api/: README.md  main.py  test.py
