[tool.poetry]
name = "nbd-crm-api"
version = "1.0.0"
description = "NBD CRM Python FastAPI Backend"
authors = ["NBD <nbd@prorich.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.104.1"
uvicorn = "0.24.0"
pydantic = "2.10.0"
python-multipart = "0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
